--- a/Restaurant-Website.css
+++ b/Restaurant-Website.css
@@ -178,3 +178,135 @@ p {
 .cta2 {
   grid-area: cta2;
 }
+
+/*...........................<Section 1>..........Starts...........................*/
+
+.features {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.feature {
+  background: white;
+  padding: 10px;
+  border: 1px solid white;
+  text-align: center;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+}
+
+h3 {
+  margin: 0 0 5px 0;
+}
+
+h3 {
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+
+.feature p {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+.feature .icon {
+  font-size: 50px;
+}
+
+/*...........................<Section 1>..........Ends...........................*/
+
+/*...........................<Section 2>..........Starts...........................*/
+
+.about {
+  background: white;
+  padding: 50px;
+  display: grid;
+  grid-template-columns: 400px 1fr;
+  align-items: center;
+}
+
+img {
+  max-width: 100%;
+}
+
+h2 {
+  margin: 0 0 5px 0;
+}
+
+button {
+  background: #ffc600;
+  border: 0;
+  padding: 10px 20px;
+}
+
+button {
+  appearance: button;
+  -webkit-writing-mode: horizontal-tb !important;
+  text-rendering: auto;
+  color: -internal-light-dark(buttontext, rgb(170, 170, 170));
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  display: inline-block;
+  text-align: center;
+  align-items: flex-start;
+  cursor: default;
+  margin: 0em;
+  font: 400 13.3333px Arial;
+}
+
+/*...........................<Section 2>..........ends...........................*/
+
+/*...........................<Section 3>..........Starts...........................*/
+
+.gallery {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.gallery h2 {
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-gap: 20px;
+  align-items: center;
+}
+
+.gallery h2:before,
+.gallery h2:after {
+  display: block;
+  content: "";
+  height: 10px;
+  background: linear-gradient(
+    to var(--direction, left),
+    var(--yellow),
+    transparent
+  );
+}
+
+.gallery h2:after {
+  --direction: right;
+}
+
+img {
+  max-width: 100%;
+}
+
+.gallery img {
+  width: 100%;
+}
